--- a/01-HTML_Level_One/MediaGalore_master.css
+++ b/01-HTML_Level_One/MediaGalore_master.css
@@ -14,11 +14,24 @@ Selected Tag {
 /*Colors can be names, or codes*/
 
 h1{
-  color: blue;
+  color: #1bf768;
 }
 
-li {
-  color: rgb(0,200,0);
+h6{
+  color: #24e32b;
+}
+
+h3{
+  color: #24e32b;
+}
+
+body{
+  background-color: #ae17c2;
+}
+
+table{
+  border-color: #039908;
+  border-width: 3px;
 }
 
 p{
